# Polynomial

./: CMakeLists.txt  Polynomial.cpp  Polynomial.h  README.md  main.cpp  myFunctions.h
include/: myFunctions.h
